err/tensorfx.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tensorfx'...
Listing './lib/python3.5/site-packages/tensorfx/data'...
Listing './lib/python3.5/site-packages/tensorfx/models'...
Listing './lib/python3.5/site-packages/tensorfx/models/nn'...
Compiling './lib/python3.5/site-packages/tensorfx/models/nn/_ff.py'...
***   File "./lib/python3.5/site-packages/tensorfx/models/nn/_ff.py", line 47
    self.hidden_layers = map(lambda (i, s): ('layer_%d' % i, s, 'relu'),
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tensorfx/prediction'...
Listing './lib/python3.5/site-packages/tensorfx/tools'...
Compiling './lib/python3.5/site-packages/tensorfx/tools/train.py'...
***   File "./lib/python3.5/site-packages/tensorfx/tools/train.py", line 28
    print 'Launching training tasks (master, worker, parameter server)...'
                                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tensorfx/training'...
Listing './lib/python3.5/site-packages/tensorfx-0.1.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
